fix ui on mobile.

--- a/public/stylesheets/homePage.css
+++ b/public/stylesheets/homePage.css
@@ -199,7 +199,13 @@
 
 @media(max-width: 425px) {
     .sample-video {
+        width: 100%;
+        padding: 0 10px;
         height: 200px;
+    }
+
+    #demo-images > a > img {
+        width: 100%;
     }
 }
 
